tests/baselines/reference/additionOperatorWithNullValueAndValidOperator.errors.txt
additionOperatorWithNullValueAndValidOperator.ts(15,10): error TS18050: The value 'null' cannot be used here.
additionOperatorWithNullValueAndValidOperator.ts(16,10): error TS18050: The value 'null' cannot be used here.
additionOperatorWithNullValueAndValidOperator.ts(17,10): error TS18050: The value 'null' cannot be used here.
additionOperatorWithNullValueAndValidOperator.ts(18,10): error TS18050: The value 'null' cannot be used here.
additionOperatorWithNullValueAndValidOperator.ts(19,10): error TS18050: The value 'null' cannot be used here.
additionOperatorWithNullValueAndValidOperator.ts(20,14): error TS18050: The value 'null' cannot be used here.
additionOperatorWithNullValueAndValidOperator.ts(21,14): error TS18050: The value 'null' cannot be used here.
additionOperatorWithNullValueAndValidOperator.ts(22,15): error TS18050: The value 'null' cannot be used here.
additionOperatorWithNullValueAndValidOperator.ts(23,17): error TS18050: The value 'null' cannot be used here.
additionOperatorWithNullValueAndValidOperator.ts(24,20): error TS18050: The value 'null' cannot be used here.


==== additionOperatorWithNullValueAndValidOperator.ts (10 errors) ====
    // If one operand is the null or undefined value, it is treated as having the type of the other operand.
    
    enum E { a, b, c }
    
    declare var a: any;
    declare var b: number;
    declare var c: E;
    declare var d: string;
    
    // null + any
    var r1: any = null + a;
    var r2: any = a + null;
    
    // null + number/enum
    var r3 = null + b;
             ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r4 = null + 1;
             ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r5 = null + c;
             ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r6 = null + E.a;
             ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r7 = null + E['a'];
             ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r8 = b + null;
                 ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r9 = 1 + null;
                 ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r10 = c + null
                  ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r11 = E.a + null;
                    ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    var r12 = E['a'] + null;
                       ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    
    // null + string
    var r13 = null + d;
    var r14 = null + '';
    var r15 = d + null;
    var r16 = '' + null;